Make virtual desktop scroll action respect wrap setting

The KWin setting for whether or not to wrap around was not respected, so
wrap was always true even if the user has turned it off. This commit
fixes that.

BUG: 425787